[project]
name = "expert-storm"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "ale-py>=0.11.1",
    "colorama>=0.4.6",
    "einops>=0.8.1",
    "gymnasium[accept-rom-license,accept-rom-licesnse,atari]>=1.1.1",
    "hydra-core>=1.3.2",
    "matplotlib>=3.10.3",
    "moviepy>=2.2.1",
    "omegaconf>=2.3.0",
    "opencv-python>=4.11.0.86",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "wandb>=0.20.1",
    "yacs>=0.1.8",
]
